--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4,6 +4,7 @@
 
 }
 
+ /* END OF DEBUG  (DELETE WHEN "GO LIVE") */
 
 
 .container{
@@ -14,3 +15,18 @@
     height: 150px;
 
 }
+
+.header-imgs {
+    height: 75px;
+    width: 75px;
+}
+
+#header-brand {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+/* #imgAvatar {
+    height: 75px;
+    width: 75px;
+} */
