--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -7,13 +7,9 @@
  /* END OF DEBUG  (DELETE WHEN "GO LIVE") */
 
 
+/* Styles that affect classes */
 .container{
     min-width: 573px;
-}
-
-#row-header {
-    height: 150px;
-
 }
 
 .header-imgs {
@@ -21,12 +17,17 @@
     width: 75px;
 }
 
+
+/* Styles that affect individual element IDs */
+#row-header {
+    height: 150px;
+    border-bottom: 5px solid #4BE0A7 !important;
+
+
+}
+
 #header-brand {
     font-size: 1.5em;
     font-weight: bold;
 }
 
-/* #imgAvatar {
-    height: 75px;
-    width: 75px;
-} */
