--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,22 +1,18 @@
-/* debug help */
-.col{
-    border: 1px dashed red;
-
-}
-
-
-
- /* END OF DEBUG  (DELETE WHEN "GO LIVE") */
-
-
 /* Styles that affect classes */
 .container{
     min-width: 573px;
+    height: 100vp;
 }
 
 .header-imgs {
     height: 75px;
     width: 75px;
+}
+
+.footer-imgs {
+    height: 75px;
+    width: 75px;
+    margin: 15px 0;
 }
 
 
@@ -39,4 +35,8 @@
 
 #bttn-createReview {
     background-color:#19FFA7;
+}
+
+#row-footer {
+    background-color: #3BBB8A;
 }
