not a super clean form div but layout in proper area and ID's assigned for backend team to reference

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,7 +1,7 @@
 /* debug help */
 
 .col {
-    border: 1px dashed red;
+    /* border: 1px dashed red; */
 }
 
 
@@ -64,7 +64,6 @@ body {
     height: 150px;
     width: 150px;
 }
-
 
 #row-footer {
     background-color: #3BBB8A;
