--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -72,6 +72,16 @@ footer {
     justify-content: center;
 }
 
+.review-summaries {
+    background-color: white;
+    border: 1px solid lightgrey;
+    border-radius: 15px;
+    text-align: center;
+    float: left;
+    padding: 20px;
+}
+
+
 /* Styles that affect individual element IDs */
 #row-header {
     height: 150px;
