--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -32,7 +32,7 @@ footer {
 
 /* Styles that affect classes */
 
-.card-body > button { 
+.card-body > button, #submit { 
     background-color:#3BBB8A;
 }
 
