Added a modal and logic to check that all fields are filled in when clicking submit on login.

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -32,7 +32,7 @@ footer {
 
 /* Styles that affect classes */
 
-.card-body > button, #submit { 
+.card-body > button, #submit, #loginModalClose { 
     background-color:#3BBB8A;
 }
 
